[project]
name = "botanim-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "cherseroff",email = "proffitm1nd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=22.8,<23.0)"
]

[tool.poetry]
packages = [{include = "botanim_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
